--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,54 +1,56 @@
-name: Run Tests
+name: Run Tests and Linter
 
 on:
-    push:
-      branches:
-        - master
-    pull_request:
-      branches:
-        - master
-  
-  jobs:
-    test:
-      runs-on: ubuntu-latest
-  
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
-  
-        - name: Set up Python
-          uses: actions/setup-python@v2
-          with:
-            python-version: '3.8'
-  
-        - name: Install dependencies
-          run: |
-            pip install -r requirements.txt  # Installer les dépendances
-  
-        - name: Run pytest
-          run: |
-            pytest  # Exécuter les tests avec pytest
-  
-    lint:
-      runs-on: ubuntu-latest
-  
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v2
-  
-        - name: Set up Python
-          uses: actions/setup-python@v2
-          with:
-            python-version: '3.8'
-  
-        - name: Install dependencies
-          run: |
-            pip install -r requirements.txt  # Installer les dépendances
-  
-        - name: Install flake8
-          run: |
-            pip install flake8  # Installer flake8 pour le linter
-  
-        - name: Run flake8
-          run: |
-            flake8 .  # Exécuter le linter sur tout le projet
+  push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Installer les dépendances
+
+    - name: Run pytest
+      run: |
+        pytest  # Exécuter les tests avec pytest
+
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt  # Installer les dépendances
+
+    - name: Install flake8
+      run: |
+        pip install flake8  # Installer flake8 pour le linter
+
+    - name: Run flake8
+      run: |
+        flake8 .  # Exécuter le linter sur tout le projet
