--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,4 +1,4 @@
-name: Run Tests and Linter
+name: Run Linter
 
 on:
   push:
@@ -9,27 +9,6 @@ on:
       - master
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.8'
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Installer les dépendances
-
-    - name: Run pytest
-      run: |
-        pytest  # Exécuter les tests avec pytest
-
   lint:
     runs-on: ubuntu-latest
 
